# aigym

./: .gitignore  Makefile  README.md  ROADMAP.md  TODOS.md  config.yaml  pyproject.toml
.union/: tasks.py
aigym/: agent.py  env.py  exceptions.py  pprint.py  prompts.py  spaces.py  types.py
examples/: agent_training.py  agent_training_flyte.py  basic_usage.py  gemini_agent.py  grpo_training.py  ollama_agent.py  openai_agent.py  transformers_batch_agent.py  transformers_streaming_agent.py  wikipedia_env.py
webgym/: agent.py  env.py  exceptions.py  pprint.py  prompts.py  spaces.py  types.py
webworld/: agent.py  env.py  spaces.py  types.py
