[build-system]
requires = ["setuptools", "setuptools_scm"]

[project]
name = "aigym"
dynamic = ["version"]
authors = [{ name = "Niels Bantilan", email = "niels.bantilan@gmail.com" }]
description = "Reinforcement learning environments for fine-tuning language models for reasoning tasks."
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "html2text",
    "httpx",
    "gymnasium",
    "markdownify",
    "pydantic",
    "pygame",
    "python-dotenv",
    "rich",
    "tiktoken",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
ollama = [
    "ollama",
]
openai = [
    "openai",
]
google-genai = [
    "google-genai",
]
dev = [
    "black",
    "ruff",
    "pytest",
    "twine",
]


[project.urls]
Homepage = "https://github.com/cosmicbboy/aigym"

[tool.setuptools]
include-package-data = true
license-files = ["licenses/*.txt", "LICENSE"]

[tool.setuptools.packages.find]
include = ["aigym*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
markers = []

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
